--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-streamlit~=1.9.0
-numpy~=1.22.4
 pandas~=1.4.2
+numpy~=1.22.4
+scipy
+datetime
+math
+sklearn
 plotly~=5.8.0
+matplotlib
 seaborn~=0.11.2
+streamlit~=1.9.0
+pmdarima
+prophet
+warnings
+statsmodels
+multiprocessing
+joblib
